clusterin attribute rules - changing schema to support itempath instead fo string. still missing function for department mode