@@ -8,12 +8,10 @@
 package com.evolveum.midpoint.common.mining.utils;
 
 import static com.evolveum.midpoint.common.mining.objects.analysis.RoleAnalysisAttributeDef.extractRealValue;
-import static com.evolveum.midpoint.xml.ns._public.common.common_3.AssignmentHolderType.F_ASSIGNMENT;
 
 import java.util.*;
 import javax.xml.namespace.QName;
 
-import com.evolveum.midpoint.common.mining.objects.analysis.RoleAnalysisAssignmentAttributeDef;
 import com.evolveum.midpoint.util.logging.Trace;
 import com.evolveum.midpoint.util.logging.TraceManager;
 import com.evolveum.prism.xml.ns._public.types_3.ItemPathType;
@@ -51,84 +49,84 @@ public class RoleAnalysisAttributeDefUtils {
         }
     };
 
-    public static RoleAnalysisAttributeDef getOrgAssignment() {
-        return orgAssignment;
-    }
+//    public static RoleAnalysisAttributeDef getOrgAssignment() {
+//        return orgAssignment;
+//    }
 
-    public static RoleAnalysisAttributeDef orgAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "org assignment", OrgType.COMPLEX_TYPE);
-    public static RoleAnalysisAttributeDef roleAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "role assignment", RoleType.COMPLEX_TYPE);
-    public static RoleAnalysisAttributeDef serviceAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "service assignment", ServiceType.COMPLEX_TYPE);
-    public static RoleAnalysisAttributeDef archetypeAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "archetype assignment", ArchetypeType.COMPLEX_TYPE);
-    public static RoleAnalysisAttributeDef resourceAssignment = getRoleAnalysisItemDefAssignment(
-            FocusType.F_ASSIGNMENT, "resource assignment", ResourceType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef orgAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "org assignment", OrgType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef roleAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "role assignment", RoleType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef serviceAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "service assignment", ServiceType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef archetypeAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "archetype assignment", ArchetypeType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef resourceAssignment = getRoleAnalysisItemDefAssignment(
+//            FocusType.F_ASSIGNMENT, "resource assignment", ResourceType.COMPLEX_TYPE);
+//
+//    public static RoleAnalysisAttributeDef orgInducement = getRoleAnalysisItemDefAssignment(
+//            OrgType.F_INDUCEMENT, "org inducement", OrgType.COMPLEX_TYPE);
+//
+//    public static RoleAnalysisAttributeDef roleInducement = getRoleAnalysisItemDefAssignment(
+//            RoleType.F_INDUCEMENT, "role inducement", RoleType.COMPLEX_TYPE);
+//
+//    public static RoleAnalysisAttributeDef serviceInducement = getRoleAnalysisItemDefAssignment(
+//            ServiceType.F_INDUCEMENT, "service inducement", ServiceType.COMPLEX_TYPE);
+//
+//    public static RoleAnalysisAttributeDef archetypeInducement = getRoleAnalysisItemDefAssignment(
+//            ArchetypeType.F_INDUCEMENT, "archetype inducement", ArchetypeType.COMPLEX_TYPE);
 
-    public static RoleAnalysisAttributeDef orgInducement = getRoleAnalysisItemDefAssignment(
-            OrgType.F_INDUCEMENT, "org inducement", OrgType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef getArchetypeRef() {
+//        return archetypeRef;
+//    }
 
-    public static RoleAnalysisAttributeDef roleInducement = getRoleAnalysisItemDefAssignment(
-            RoleType.F_INDUCEMENT, "role inducement", RoleType.COMPLEX_TYPE);
+//    public static RoleAnalysisAttributeDef archetypeRef = new RoleAnalysisAttributeDef(
+//            ItemPath.create(FocusType.F_ARCHETYPE_REF),
+//            false,
+//            "archetype ref",
+//            ArchetypeType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.OID) {
+//
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(FocusType.class)
+//                    .item(getPath()).ref(value)
+//                    .build();
+//        }
+//
+//        @Override
+//        public String resolveSingleValueItem(@NotNull PrismObject<?> prismObject, @NotNull ItemPath itemPath) {
+//            Item<PrismValue, ItemDefinition<?>> property = prismObject.findItem(itemPath);
+//
+//            if (property == null) {
+//                return null;
+//            }
+//
+//            Object realValue = property.getRealValue();
+//            if (realValue instanceof ObjectReferenceType objectReference) {
+//                return objectReference.getOid();
+//            }
+//            return null;
+//        }
+//    };
 
-    public static RoleAnalysisAttributeDef serviceInducement = getRoleAnalysisItemDefAssignment(
-            ServiceType.F_INDUCEMENT, "service inducement", ServiceType.COMPLEX_TYPE);
-
-    public static RoleAnalysisAttributeDef archetypeInducement = getRoleAnalysisItemDefAssignment(
-            ArchetypeType.F_INDUCEMENT, "archetype inducement", ArchetypeType.COMPLEX_TYPE);
-
-    public static RoleAnalysisAttributeDef getArchetypeRef() {
-        return archetypeRef;
-    }
-
-    public static RoleAnalysisAttributeDef archetypeRef = new RoleAnalysisAttributeDef(
-            ItemPath.create(FocusType.F_ARCHETYPE_REF),
-            false,
-            "archetype ref",
-            ArchetypeType.class,
-            RoleAnalysisAttributeDef.IdentifierType.OID) {
-
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(FocusType.class)
-                    .item(getPath()).ref(value)
-                    .build();
-        }
-
-        @Override
-        public String resolveSingleValueItem(@NotNull PrismObject<?> prismObject, @NotNull ItemPath itemPath) {
-            Item<PrismValue, ItemDefinition<?>> property = prismObject.findItem(itemPath);
-
-            if (property == null) {
-                return null;
-            }
-
-            Object realValue = property.getRealValue();
-            if (realValue instanceof ObjectReferenceType objectReference) {
-                return objectReference.getOid();
-            }
-            return null;
-        }
-    };
-
-    public static RoleAnalysisAttributeDef getTitle() {
-        return title;
-    }
-
-    public static RoleAnalysisAttributeDef title = new RoleAnalysisAttributeDef(
-            UserType.F_TITLE,
-            false,
-            "title",
-            UserType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(UserType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
+//    public static RoleAnalysisAttributeDef getTitle() {
+//        return title;
+//    }
+//
+//    public static RoleAnalysisAttributeDef title = new RoleAnalysisAttributeDef(
+//            UserType.F_TITLE,
+//            false,
+//            "title",
+//            UserType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(UserType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
 //    public static RoleAnalysisAttributeDef locale = new RoleAnalysisAttributeDef(
 //            UserType.F_LOCALE,
@@ -144,37 +142,37 @@ public class RoleAnalysisAttributeDefUtils {
 //        }
 //    };
 
-    public static RoleAnalysisAttributeDef getLocality() {
-        return locality;
-    }
+//    public static RoleAnalysisAttributeDef getLocality() {
+//        return locality;
+//    }
+//
+//    public static RoleAnalysisAttributeDef locality = new RoleAnalysisAttributeDef(
+//            UserType.F_LOCALITY,
+//            false,
+//            "locality",
+//            FocusType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(FocusType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
-    public static RoleAnalysisAttributeDef locality = new RoleAnalysisAttributeDef(
-            UserType.F_LOCALITY,
-            false,
-            "locality",
-            FocusType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(FocusType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
-
-    public static RoleAnalysisAttributeDef costCenter = new RoleAnalysisAttributeDef(
-            UserType.F_COST_CENTER,
-            false,
-            "costCenter",
-            FocusType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(FocusType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
+//    public static RoleAnalysisAttributeDef costCenter = new RoleAnalysisAttributeDef(
+//            UserType.F_COST_CENTER,
+//            false,
+//            "costCenter",
+//            FocusType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(FocusType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
 //    public static RoleAnalysisAttributeDef lifecycleState = new RoleAnalysisAttributeDef(
 //            UserType.F_LIFECYCLE_STATE,
@@ -190,21 +188,21 @@ public class RoleAnalysisAttributeDefUtils {
 //        }
 //    };
 
-    public static RoleAnalysisAttributeDef riskLevel = new RoleAnalysisAttributeDef(
-            RoleType.F_RISK_LEVEL,
-            false,
-            "riskLevel",
-            RoleType.class,
-            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
-        @Override
-        public ObjectQuery getQuery(String value) {
-            return PrismContext.get().queryFor(RoleType.class)
-                    .item(getPath()).eq(value)
-                    .build();
-        }
-    };
+//    public static RoleAnalysisAttributeDef riskLevel = new RoleAnalysisAttributeDef(
+//            RoleType.F_RISK_LEVEL,
+//            false,
+//            "riskLevel",
+//            RoleType.class,
+//            RoleAnalysisAttributeDef.IdentifierType.FINAL) {
+//        @Override
+//        public ObjectQuery getQuery(String value) {
+//            return PrismContext.get().queryFor(RoleType.class)
+//                    .item(getPath()).eq(value)
+//                    .build();
+//        }
+//    };
 
-    public static RoleAnalysisAttributeDef getAttributeByDisplayValue(ItemPath itemPath, AnalysisAttributeSettingType analysisAttributeSettings) {
+    public static RoleAnalysisAttributeDef getAttributeByItemPath(ItemPath itemPath, AnalysisAttributeSettingType analysisAttributeSettings) {
         List<RoleAnalysisAttributeDef> attributeMap = createAttributeList(analysisAttributeSettings);
         for (RoleAnalysisAttributeDef attribute : attributeMap) {
             if (attribute.getPath().equivalent(itemPath)) {
@@ -219,21 +217,19 @@ public class RoleAnalysisAttributeDefUtils {
         List<RoleAnalysisAttributeDef> attributeDefs = new ArrayList<>();
 
         PrismObjectDefinition<UserType> userDefinition = PrismContext.get().getSchemaRegistry().findObjectDefinitionByCompileTimeClass(UserType.class);
-
-        PrismContainerDefinition<AssignmentType> assignmentDefinition = userDefinition.findContainerDefinition(F_ASSIGNMENT);
-        List<AnalysisAttributeRuleType> assignmentRules = analysisAttributeSetting.getAssignmentRule();
-        for (AnalysisAttributeRuleType rule : assignmentRules) {
-            RoleAnalysisAttributeDef attributeDef = new RoleAnalysisAssignmentAttributeDef(ItemPath.create(F_ASSIGNMENT, AssignmentType.F_TARGET_REF), assignmentDefinition, rule);
-            attributeDefs.add(attributeDef);
-        }
+//
+//        PrismContainerDefinition<AssignmentType> assignmentDefinition = userDefinition.findContainerDefinition(F_ASSIGNMENT);
+//        List<AnalysisAttributeRuleType> assignmentRules = analysisAttributeSetting.getAssignmentRule();
+//        for (AnalysisAttributeRuleType rule : assignmentRules) {
+//            RoleAnalysisAttributeDef attributeDef = new RoleAnalysisAssignmentAttributeDef(ItemPath.create(F_ASSIGNMENT, AssignmentType.F_TARGET_REF), assignmentDefinition, rule);
+//            attributeDefs.add(attributeDef);
+//        }
 
         List<ItemPathType> analysisAttributeRule = analysisAttributeSetting.getPath();
 
         if (analysisAttributeRule.isEmpty()) {
             return attributeDefs;
         }
-
-
 
         for (ItemPathType itemPathType : analysisAttributeRule) {
             if (itemPathType == null) {
@@ -254,46 +250,46 @@ public class RoleAnalysisAttributeDefUtils {
 
 
 
-    public static @NotNull List<RoleAnalysisAttributeDef> getAttributesForRoleAnalysis() {
-        List<RoleAnalysisAttributeDef> analysisAttributeDefs = new ArrayList<>(List.of(
-//                lifecycleState,
-//                locale,
-                locality,
-                costCenter,
-                riskLevel,
-                orgAssignment,
-                resourceAssignment,
-                roleAssignment,
-                serviceAssignment,
-                orgInducement,
-                roleInducement,
-                serviceInducement,
-                archetypeRef
-        ));
-        analysisAttributeDefs.addAll(loadRoleExtension());
+//    public static @NotNull List<RoleAnalysisAttributeDef> getAttributesForRoleAnalysis() {
+//        List<RoleAnalysisAttributeDef> analysisAttributeDefs = new ArrayList<>(List.of(
+////                lifecycleState,
+////                locale,
+//                locality,
+//                costCenter,
+//                riskLevel,
+//                orgAssignment,
+//                resourceAssignment,
+//                roleAssignment,
+//                serviceAssignment,
+//                orgInducement,
+//                roleInducement,
+//                serviceInducement,
+//                archetypeRef
+//        ));
+//        analysisAttributeDefs.addAll(loadRoleExtension());
+//
+//        return Collections.unmodifiableList(analysisAttributeDefs);
+//    }
 
-        return Collections.unmodifiableList(analysisAttributeDefs);
-    }
-
-    public static @NotNull List<RoleAnalysisAttributeDef> getAttributesForUserAnalysis() {
-        List<RoleAnalysisAttributeDef> analysisAttributeDefs = new ArrayList<>(List.of(
-                title,
-//                locale,
-                locality,
-                costCenter,
-//                lifecycleState,
-//                archetypeAssignment,
-                orgAssignment,
-                resourceAssignment,
-                roleAssignment,
-                serviceAssignment,
-                archetypeRef
-        ));
-
-        analysisAttributeDefs.addAll(loadUserExtension());
-
-        return Collections.unmodifiableList(analysisAttributeDefs);
-    }
+//    public static @NotNull List<RoleAnalysisAttributeDef> getAttributesForUserAnalysis() {
+//        List<RoleAnalysisAttributeDef> analysisAttributeDefs = new ArrayList<>(List.of(
+//                title,
+////                locale,
+//                locality,
+//                costCenter,
+////                lifecycleState,
+////                archetypeAssignment,
+//                orgAssignment,
+//                resourceAssignment,
+//                roleAssignment,
+//                serviceAssignment,
+//                archetypeRef
+//        ));
+//
+//        analysisAttributeDefs.addAll(loadUserExtension());
+//
+//        return Collections.unmodifiableList(analysisAttributeDefs);
+//    }
 
     @NotNull
     private static RoleAnalysisAttributeDef getRoleAnalysisItemDefAssignment(
@@ -690,64 +686,64 @@ public class RoleAnalysisAttributeDefUtils {
 //    }
 
 
-    private static void addAttributesToResult(
-            @NotNull List<RoleAnalysisAttributeDef> attributeDef,
-            @NotNull List<AnalysisAttributeRuleType> result,
-            @NotNull QName complexType) {
-        for (RoleAnalysisAttributeDef def : attributeDef) {
-            result.add(createAnalysisAttributeRule(def, complexType));
-        }
-    }
+//    private static void addAttributesToResult(
+//            @NotNull List<RoleAnalysisAttributeDef> attributeDef,
+//            @NotNull List<AnalysisAttributeRuleType> result,
+//            @NotNull QName complexType) {
+//        for (RoleAnalysisAttributeDef def : attributeDef) {
+//            result.add(createAnalysisAttributeRule(def, complexType));
+//        }
+//    }
+//
+//    private static @NotNull AnalysisAttributeRuleType createAnalysisAttributeRule(
+//            @NotNull RoleAnalysisAttributeDef def,
+//            @NotNull QName complexType) {
+//        AnalysisAttributeRuleType rule = new AnalysisAttributeRuleType();
+////        rule.setsetAttributeIdentifier(def.getDisplayValue());
+////        rule.setPropertyType(complexType);
+//        return rule;
+//    }
 
-    private static @NotNull AnalysisAttributeRuleType createAnalysisAttributeRule(
-            @NotNull RoleAnalysisAttributeDef def,
-            @NotNull QName complexType) {
-        AnalysisAttributeRuleType rule = new AnalysisAttributeRuleType();
-//        rule.setsetAttributeIdentifier(def.getDisplayValue());
-//        rule.setPropertyType(complexType);
-        return rule;
-    }
+//
+//    @NotNull
+//    public static List<RoleAnalysisAttributeDef> createSimpleUserAttributeChoiceSet() {
+//        List<RoleAnalysisAttributeDef> attributesForUserAnalysis = new ArrayList<>(getAttributesForUserAnalysis());
+//        attributesForUserAnalysis.removeIf(RoleAnalysisAttributeDef::isContainer);
+//
+//        RoleAnalysisAttributeDef objectNameDef = getObjectNameDef();
+//        attributesForUserAnalysis.add(0, objectNameDef);
+//        return attributesForUserAnalysis;
+//    }
+//
+//    @NotNull
+//    public static List<RoleAnalysisAttributeDef> createSimpleRoleAttributeChoiceSet() {
+//        List<RoleAnalysisAttributeDef> attributesForRoleAnalysis = new ArrayList<>(getAttributesForRoleAnalysis());
+//        attributesForRoleAnalysis.removeIf(RoleAnalysisAttributeDef::isContainer);
+//
+//        RoleAnalysisAttributeDef objectNameDef = getObjectNameDef();
+//        attributesForRoleAnalysis.add(0, objectNameDef);
+//        return attributesForRoleAnalysis;
+//    }
 
-
-    @NotNull
-    public static List<RoleAnalysisAttributeDef> createSimpleUserAttributeChoiceSet() {
-        List<RoleAnalysisAttributeDef> attributesForUserAnalysis = new ArrayList<>(getAttributesForUserAnalysis());
-        attributesForUserAnalysis.removeIf(RoleAnalysisAttributeDef::isContainer);
-
-        RoleAnalysisAttributeDef objectNameDef = getObjectNameDef();
-        attributesForUserAnalysis.add(0, objectNameDef);
-        return attributesForUserAnalysis;
-    }
-
-    @NotNull
-    public static List<RoleAnalysisAttributeDef> createSimpleRoleAttributeChoiceSet() {
-        List<RoleAnalysisAttributeDef> attributesForRoleAnalysis = new ArrayList<>(getAttributesForRoleAnalysis());
-        attributesForRoleAnalysis.removeIf(RoleAnalysisAttributeDef::isContainer);
-
-        RoleAnalysisAttributeDef objectNameDef = getObjectNameDef();
-        attributesForRoleAnalysis.add(0, objectNameDef);
-        return attributesForRoleAnalysis;
-    }
-
-    public static @NotNull List<ClusteringAttributeRuleType> createClusteringAttributeChoiceSet(
-            @NotNull RoleAnalysisProcessModeType processModeType) {
-        List<RoleAnalysisAttributeDef> attributesForUserAnalysis;
-        if (processModeType.equals(RoleAnalysisProcessModeType.USER)) {
-            attributesForUserAnalysis = RoleAnalysisAttributeDefUtils.getAttributesForUserAnalysis();
-        } else {
-            attributesForUserAnalysis = RoleAnalysisAttributeDefUtils.getAttributesForRoleAnalysis();
-        }
-
-        List<ClusteringAttributeRuleType> result = new ArrayList<>();
-        for (RoleAnalysisAttributeDef def : attributesForUserAnalysis) {
-            ClusteringAttributeRuleType rule = new ClusteringAttributeRuleType();
-            rule.setAttributeIdentifier(def.getDisplayValue());
-            rule.setSimilarity(100.0);
-            rule.setWeight(1.0);
-            rule.setIsMultiValue(def.isContainer());
-            result.add(rule);
-        }
-        return result;
-    }
+//    public static @NotNull List<ClusteringAttributeRuleType> createClusteringAttributeChoiceSet(
+//            @NotNull RoleAnalysisProcessModeType processModeType) {
+//        List<RoleAnalysisAttributeDef> attributesForUserAnalysis;
+//        if (processModeType.equals(RoleAnalysisProcessModeType.USER)) {
+//            attributesForUserAnalysis = RoleAnalysisAttributeDefUtils.getAttributesForUserAnalysis();
+//        } else {
+//            attributesForUserAnalysis = RoleAnalysisAttributeDefUtils.getAttributesForRoleAnalysis();
+//        }
+//
+//        List<ClusteringAttributeRuleType> result = new ArrayList<>();
+//        for (RoleAnalysisAttributeDef def : attributesForUserAnalysis) {
+//            ClusteringAttributeRuleType rule = new ClusteringAttributeRuleType();
+//            rule.setPath(def.getPath().toBean());
+//            rule.setSimilarity(100.0);
+//            rule.setWeight(1.0);
+//            rule.setIsMultiValue(def.isContainer());
+//            result.add(rule);
+//        }
+//        return result;
+//    }
 
 }
